--- a/src/pages/design/example-page.astro
+++ b/src/pages/design/example-page.astro
@@ -1,6 +1,7 @@
 ---
 import DesignLayout from '../../layouts/DesignLayout.astro';
+import HeroSection from '../../components/HeroSection.astro';
 ---
 <DesignLayout>
-    <h1>Example Page</h1>
+  <HeroSection />
 </DesignLayout>
